# RobloxAutoclicker

./: .gitignore  BUILD.md  BUILD_WINDOWS.md  CLAUDE.md  CODE_DOCUMENTATION.md  INSTALL.md  INSTALLATION.md  QUICKSTART.md  README.md  TOGA_MIGRATION.md  TROUBLESHOOTING.md  WEB_CONTROLLER.md  autoclicker_gui.py  autoclicker_gui_toga.py  autoinput_gui.py  autoinput_gui_toga.py  autoinput_toggle.py  build_app.sh  build_windows.py  click_test.html  config.yaml  create_app.sh  debug_autoclicker.py  debug_autoinput.py  pyproject.toml  roblox_autoclicker.py  roblox_autoclicker_toggle.py  run.sh  run_autoclicker.sh  run_autoinput.sh  run_toggle.sh  setup.sh  start.sh  start_autoinput_gui.sh  start_gui.sh  start_gui_toga.sh  start_web_controller.sh  test_permissions.py  web_controller.py
autoinput/: __init__.py  __main__.py  autoclicker_quartz.py  autoinput_toggle.py  config.yaml  debug_autoinput.py  run_autoclicker.sh
docs/: CONFIG.md  INSTALL.md  INSTALLATION.md  TOGA_MIGRATION.md  TROUBLESHOOTING.md  WEB_CONTROLLER.md
robloxautoclicker/: __init__.py  __main__.py
scripts/: run_autoinput.sh  run_toggle.sh  start_autoinput_gui.sh  start_autoinput_gui_tkinter.sh  start_autoinput_gui_toga.sh  start_web_controller.sh
src/: autoclicker_quartz.py  autoinput.py  autoinput_gui_toga.py  autoinput_toggle.py  debug_autoinput.py  web_controller.py
