[tool.briefcase]
project_name = "Autoinput"
bundle = "com.autoinput"
version = "1.5.0"
url = "https://github.com/whaeuser/Autoinput"
author = "whaeuser"
author_email = "noreply@example.com"

[tool.briefcase.app.autoinput]
formal_name = "Autoinput"
description = "Konfigurierbarer Autoclicker für macOS und Windows"
sources = ['autoinput']
requires = [
    'toga>=0.4.0',
    'pyyaml',
]
# pyautogui und pynput können nicht gebündelt werden (keine ARM64 wheels)
# Müssen auf dem Ziel-System installiert sein

[tool.briefcase.app.autoinput.license]
text = "MIT"

[tool.briefcase.app.autoinput.macOS]
requires = [
    'toga-cocoa>=0.4.0',
]

[tool.briefcase.app.autoinput.windows]
requires = [
    'toga-winforms>=0.4.0',
]

[build-system]
requires = ["briefcase"]
